# avrae-autoupdate

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  action.yml  example-collections.json  example-gvars.json  example-workflow.yml  initialize.py  main.py  pull.py  push.py  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: initialize_from_avrae.yaml  pull_from_avrae.yaml  push_to_avrae.yaml  tests.yaml  tests.yml
actions/initialize/: action.yml
actions/pull/: action.yml
actions/push/: action.yml
autoupdate/: avrae.py  initialize.py  pull.py  push.py  sources.py
examples/: collections.json  ex-collections.json  ex-gvars.json  ex-workflow.yml  gvars.json
examples/workflows/: initialize.yml  pull.yml  push.yml
src/: api.py  config.py  main.py  models.py  parsing.py  utils.py
tests/: collection_response.json  conftest.py  empty_collection_response.json  gvars_response.json  test_api.py  test_avrae.py  test_config.py  test_initialize.py  test_pull.py  test_push.py  test_sources.py  test_utils_parsing.py
tests/unit/: test_api.py  test_config.py  test_main.py  test_parsing.py  test_utils.py
