[project]
name = "avrae-autoupdate"
version = "3.0.0"
description = "Tool to automatically update Avrae collections and GVARs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv~=1.0.0",
    "requests~=2.32.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120

